done dascktop version

--- a/optic/index.html
+++ b/optic/index.html
@@ -65,62 +65,46 @@
       <div class="main-slider__slider">
          <div class="main-slider__item">
             <div class="main-slider__background">
-               <img src="" alt="background slider photo">
+               <img src="./img/mainslider.png" alt="background slider photo">
             </div>
    
-            <div class="main-slider__info">
-               <p>
-                  -50% на сонцезахисні окуляри тм DARIO
-               </p>
-   
+            <div class="main-slider__info">   
                <a href="#" class="button">
                   Підібрати
                </a>
             </div>
          </div>
-   
+
          <div class="main-slider__item">
             <div class="main-slider__background">
-               <img src="" alt="background slider photo">
+               <img src="./img/mainslider.png" alt="background slider photo">
             </div>
    
             <div class="main-slider__info">
-               <p>
-                  -50% на сонцезахисні окуляри тм DARIO
-               </p>
-   
                <a href="#" class="button">
                   Підібрати
                </a>
             </div>
          </div>
-   
+
          <div class="main-slider__item">
             <div class="main-slider__background">
-               <img src="" alt="background slider photo">
+               <img src="./img/mainslider.png" alt="background slider photo">
             </div>
    
             <div class="main-slider__info">
-               <p>
-                  -50% на сонцезахисні окуляри тм DARIO
-               </p>
-   
                <a href="#" class="button">
                   Підібрати
                </a>
             </div>
          </div>
-   
+
          <div class="main-slider__item">
             <div class="main-slider__background">
-               <img src="" alt="background slider photo">
+               <img src="./img/mainslider.png" alt="background slider photo">
             </div>
    
             <div class="main-slider__info">
-               <p>
-                  -50% на сонцезахисні окуляри тм DARIO
-               </p>
-   
                <a href="#" class="button">
                   Підібрати
                </a>
@@ -387,12 +371,18 @@
             <p>Оправи</p>
 
             <div class="products__list">
-               <p>
-                  <strong>Контактні лінзи та засоби догляду</strong> 
-                  від американських компаній-виробників:
-                  Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
-                  заводи яких зосереджені в багатьох країнах світу
-               </p>
+               <div class="products__text">
+                  <p>
+                     <strong>Оприви для окулярів</strong> 
+                     від американських компаній-виробників:
+                  </p>
+                  <p>
+                     Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
+                  </p>
+                  <p>
+                     заводи яких зосереджені в багатьох країнах світу
+                  </p>
+               </div>
    
                <div class="products__slider">
                   <div class="products__product">
@@ -498,12 +488,18 @@
             <p>Лінзи</p>
 
             <div class="products__list">
-               <p>
-                  <strong>Контактні лінзи та засоби догляду</strong> 
-                  від американських компаній-виробників:
-                  Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
-                  заводи яких зосереджені в багатьох країнах світу
-               </p>
+               <div class="products__text">
+                  <p>
+                     <strong>Лінзи для окулярів</strong> 
+                     від американських компаній-виробників:
+                  </p>
+                  <p>
+                     Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
+                  </p>
+                  <p>
+                     заводи яких зосереджені в багатьох країнах світу
+                  </p>
+               </div>
    
                <div class="products__slider">
                   <div class="products__product">
@@ -605,7 +601,7 @@
             </div>
          </li>
 
-         <li class="products__item products__item--active">
+         <li class="products__item">
             <p>Контактні лінзи</p>
 
             <div class="products__list">
@@ -726,12 +722,18 @@
             <p>Аксесуари</p>
    
             <div class="products__list">
-               <p>
-                  <strong>Контактні лінзи та засоби догляду</strong> 
-                  від американських компаній-виробників:
-                  Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
-                  заводи яких зосереджені в багатьох країнах світу
-               </p>
+               <div class="products__text">
+                  <p>
+                     <strong>Аксесуари та різні ніштяки</strong> 
+                     від американських компаній-виробників:
+                  </p>
+                  <p>
+                     Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
+                  </p>
+                  <p>
+                     заводи яких зосереджені в багатьох країнах світу
+                  </p>
+               </div>
    
                <div class="products__slider">
                   <div class="products__product">
@@ -837,12 +839,18 @@
             <p>Догляд</p>
    
             <div class="products__list">
-               <p>
-                  <strong>Контактні лінзи та засоби догляду</strong> 
-                  від американських компаній-виробників:
-                  Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
-                  заводи яких зосереджені в багатьох країнах світу
-               </p>
+               <div class="products__text">
+                  <p>
+                     <strong>Засоби догляду</strong> 
+                     від американських компаній-виробників:
+                  </p>
+                  <p>
+                     Johnson&Johnson, Baush+Lomb, Cooper Vision, Alcon, 
+                  </p>
+                  <p>
+                     заводи яких зосереджені в багатьох країнах світу
+                  </p>
+               </div>
    
                <div class="products__slider">
                   <div class="products__product">
@@ -958,7 +966,7 @@
          </div>
       
          <div class="clientCart__photo">
-            <img src="" alt="client cart photo">
+            <img src="./img/clientCart.png" alt="client cart photo">
          </div>
       </div>
    
@@ -974,15 +982,30 @@
    
          <form action="">
             <label for="name">Ваше ім'я</label>
-            <input type="text" name="name" id="name">
+            <input 
+               type="text" 
+               name="name" 
+               id="name"
+               placeholder="Олег Головацький"
+            >
    
             <label for="phone">Номер телефону</label>
-            <input type="tel" name="phone">
+            <input 
+               type="tel" 
+               name="phone"
+               id="phone"
+               placeholder="+380..."
+            >
    
             <label for="email">Ваш e-mail</label>
-            <input type="email" name="email">
+            <input 
+               type="email" 
+               name="email"
+               id="email"
+               placeholder="your_email@gmail.com"
+            >
    
-            <input type="button" value="Отримати знижку">
+            <input type="button" value="Отримати знижку" class="button">
          </form>
       </div>
    </div>
@@ -1005,7 +1028,15 @@
       </div>
    
       <div class="see__video">
-         
+         <iframe 
+            width="713" 
+            height="454" 
+            src="https://www.youtube.com/embed/x5hyW10Qij0" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen
+         ></iframe>
       </div>
    </div>
 </section>
@@ -1022,11 +1053,7 @@
       </div>
    
       <div class="certificates__photo">
-         <img src="" alt="certificate cart">
-   
-         <img src="" alt="certificate cart">
-   
-         <img src="" alt="certificate cart">
+         <img src="./img/certificates.png" alt="certificate cart">
       </div>
    </div>
 </section>
@@ -1043,7 +1070,31 @@
       <ul class="where__menu">
          <li class="where__item">
             <p>
-               <span></span>
+               <span class="icon-marker"></span>
+   
+               вул. Городоцька, 35
+            </p>
+   
+            <div class="where__map">
+               <img src="" alt="map photo">
+            </div>
+         </li>
+   
+         <li class="where__item where__item--active">
+            <p>
+               <span class="icon-marker"></span>
+   
+               вул. Городоцька, 35
+            </p>
+   
+            <div class="where__map">
+               <img src="./img/map.png" alt="map photo">
+            </div>
+         </li>
+   
+         <li class="where__item">
+            <p>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1055,7 +1106,7 @@
    
          <li class="where__item">
             <p>
-               <span></span>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1067,7 +1118,7 @@
    
          <li class="where__item">
             <p>
-               <span></span>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1079,7 +1130,7 @@
    
          <li class="where__item">
             <p>
-               <span></span>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1091,7 +1142,7 @@
    
          <li class="where__item">
             <p>
-               <span></span>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1103,43 +1154,7 @@
    
          <li class="where__item">
             <p>
-               <span></span>
-   
-               вул. Городоцька, 35
-            </p>
-   
-            <div class="where__map">
-               <img src="" alt="map photo">
-            </div>
-         </li>
-   
-         <li class="where__item">
-            <p>
-               <span></span>
-   
-               вул. Городоцька, 35
-            </p>
-   
-            <div class="where__map">
-               <img src="" alt="map photo">
-            </div>
-         </li>
-   
-         <li class="where__item">
-            <p>
-               <span></span>
-   
-               вул. Городоцька, 35
-            </p>
-   
-            <div class="where__map">
-               <img src="" alt="map photo">
-            </div>
-         </li>
-   
-         <li class="where__item">
-            <p>
-               <span></span>
+               <span class="icon-marker"></span>
    
                вул. Городоцька, 35
             </p>
@@ -1158,38 +1173,38 @@
       <div class="footer__wrapper">
          <div class="footer__column">
             <div class="footer__logo">
-               <img src="" alt="logo">
+               <img src="./img/footerLogo.svg" alt="logo">
             </div>
-   
+
             <p>
                Мережа магазинів оптики «Файна оптика» у Львові
             </p>
-   
+
             <div class="footer__workTime">
                <p>Працюємо з <strong>Пн-Пт</strong></p>
                <p>з <strong>10:00</strong> до <strong>18:00</strong></p>
             </div>
-   
+
             <div class="footer__social">
                <a href="#" target="_blanc">
-                  <img src="" alt="">
+                  <span class="icon-telegram"></span>
                </a>
-   
+
                <a href="#" target="_blanc">
-                  <img src="" alt="">
+                  <span class="icon-instagram"></span>
                </a>
-   
+
                <a href="#" target="_blanc">
-                  <img src="" alt="">
+                  <span class="icon-viber"></span>
                </a>
             </div>
          </div>
-   
+
          <div class="footer__column">
             <a href="tel:+38 050 14 11 444">+38 050 14 11 444</a>
             <a href="maolto:fineoptica@gmail.com">fineoptica@gmail.com</a>
          </div>
-   
+
          <div class="footer__form">
             <div class="footer__heading">
                Виникли запитання?
@@ -1204,7 +1219,7 @@
             </div>
          </div>
       </div>
-   
+
       <div class="footer__copyright">
          <p>
             Дизайн та розробка — 
