created mobile version

--- a/optic/index.html
+++ b/optic/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1028,9 +1027,7 @@
       </div>
    
       <div class="see__video">
-         <iframe 
-            width="713" 
-            height="454" 
+         <iframe
             src="https://www.youtube.com/embed/x5hyW10Qij0" 
             title="YouTube video player" 
             frameborder="0" 
@@ -1200,7 +1197,7 @@
             </div>
          </div>
 
-         <div class="footer__column">
+         <div class="footer__contacts">
             <a href="tel:+38 050 14 11 444">+38 050 14 11 444</a>
             <a href="maolto:fineoptica@gmail.com">fineoptica@gmail.com</a>
          </div>
