--- a/optic/index.html
+++ b/optic/index.html
@@ -30,6 +30,12 @@
                Зворотній дзвінок
             </button>
          </div>
+
+         <div class="header__burgerBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
       </div>
    
       <div class="header__nav">
@@ -54,6 +60,48 @@
                </li>
             </ul>
          </nav>
+      </div>
+   </div>
+
+   <div class="header__mobileMenu">
+      <div class="mobile__nav">
+         <ul class="mobile__list">
+            <li class="mobile__item">
+               <a href="#about">Про нас</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#services">Наші послуги</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#products">Наша продукція</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#clientCart">Карта клієнта</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#see">Дивись нас на YouTube</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#insta">Наш Instagram</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#certificates">Сертифікати</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#reviews">Відгуки</a>
+            </li>
+
+            <li class="mobile__item">
+               <a href="#where">Контакти</a>
+            </li>
+         </ul>
       </div>
    </div>
 </header>
@@ -1037,6 +1085,21 @@
       </div>
    </div>
 </section>
+         <section class="section insta">
+   <div class="content insta__content">
+      <div class="title insta__title">
+         Наш Instagram
+      </div>
+
+      <div class="insta__heading heading">
+         Слідкуйте <br>
+         за нами в Instagram
+      </div>
+
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-70ee3dd4-8ff8-46fe-8189-4d14b8e4f78e"></div>
+   </div>
+</section>
          <section class="section certificates">
    <div class="certificates__content content">
       <div class="certificates__info">
@@ -1052,6 +1115,168 @@
       <div class="certificates__photo">
          <img src="./img/certificates.png" alt="certificate cart">
       </div>
+   </div>
+</section>
+         <section class="section reviews">
+   <div class="content reviews__content">
+      <div class="title reviews__title">
+         Відгуки
+      </div>
+
+      <div class="reviews__heading heading">
+         Що говорять <br>
+         наші клієнти про нас
+      </div>
+
+      <ul class="reviews__list">
+         <li class="reviews__item">
+            <div class="reviews__row">
+               <div class="reviews__column">
+                  <div class="reviews__photo">
+                     <img src="./img/review1.png" alt="people photo">
+                  </div>
+
+                  <div class="reviews__data">
+                     <div class="reviews__name">
+                        Андрій Колос
+                     </div>
+
+                     <div class="reviews__location">
+                        Львів, Україна
+                     </div>
+                  </div>
+               </div>
+
+               <div class="reviews__stars">
+                  4.5
+               </div>
+            </div>
+
+            <div class="reviews__text">
+               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed consectetur orci vel fringilla vulputate. 
+               Proin eu turpis eu libero rhoncus semper at quis sem.”.
+            </div>
+         </li>
+
+         <li class="reviews__item">
+            <div class="reviews__row">
+               <div class="reviews__column">
+                  <div class="reviews__photo">
+                     <img src="./img/review2.png" alt="people photo">
+                  </div>
+
+                  <div class="reviews__data">
+                     <div class="reviews__name">
+                        Тетяна Лісна
+                     </div>
+
+                     <div class="reviews__location">
+                        Львів, Україна
+                     </div>
+                  </div>
+               </div>
+
+               <div class="reviews__stars">
+                  4.5
+               </div>
+            </div>
+
+            <div class="reviews__text">
+               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed consectetur orci vel fringilla vulputate. ”.
+            </div>
+         </li>
+
+         <li class="reviews__item">
+            <div class="reviews__row">
+               <div class="reviews__column">
+                  <div class="reviews__photo">
+                     <img src="./img/review3.png" alt="people photo">
+                  </div>
+
+                  <div class="reviews__data">
+                     <div class="reviews__name">
+                        Ольга Ковальчук
+                     </div>
+
+                     <div class="reviews__location">
+                        Львів, Україна
+                     </div>
+                  </div>
+               </div>
+
+               <div class="reviews__stars">
+                  4.5
+               </div>
+            </div>
+
+            <div class="reviews__text">
+               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed consectetur orci vel fringilla vulputate.”.
+            </div>
+         </li>
+
+         <li class="reviews__item">
+            <div class="reviews__row">
+               <div class="reviews__column">
+                  <div class="reviews__photo">
+                     <img src="./img/review1.png" alt="people photo">
+                  </div>
+
+                  <div class="reviews__data">
+                     <div class="reviews__name">
+                        Роман Кентавр
+                     </div>
+
+                     <div class="reviews__location">
+                        Львів, Україна
+                     </div>
+                  </div>
+               </div>
+
+               <div class="reviews__stars">
+                  4.5
+               </div>
+            </div>
+
+            <div class="reviews__text">
+               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed consectetur orci vel fringilla vulputate. 
+               Proin eu turpis eu libero rhoncus semper at quis sem.”.
+            </div>
+         </li>
+
+         <li class="reviews__item">
+            <div class="reviews__row">
+               <div class="reviews__column">
+                  <div class="reviews__photo">
+                     <img src="./img/review2.png" alt="people photo">
+                  </div>
+
+                  <div class="reviews__data">
+                     <div class="reviews__name">
+                        Олег Космос
+                     </div>
+
+                     <div class="reviews__location">
+                        Львів, Україна
+                     </div>
+                  </div>
+               </div>
+
+               <div class="reviews__stars">
+                  4.5
+               </div>
+            </div>
+
+            <div class="reviews__text">
+               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed consectetur orci vel fringilla vulputate. 
+               Proin eu turpis eu libero rhoncus semper at quis sem.”.
+            </div>
+         </li>
+      </ul>
    </div>
 </section>
          <section class="section where">
