--- a/optic/index.html
+++ b/optic/index.html
@@ -1322,7 +1322,7 @@
             </div>
          </li>
 
-         <li class="where__item where__item--active">
+         <li class="where__item">
             <p>
                <span class="icon-marker"></span>
    
