update link in menu

--- a/optic/index.html
+++ b/optic/index.html
@@ -43,19 +43,19 @@
          <nav class="nav">
             <ul class="primary-menu menu">
                <li class="menu-item">
-                  <a href="#">
+                  <a href="#about">
                      Про нас
                   </a>
                </li>
    
                <li class="menu-item">
-                  <a href="#">
+                  <a href="#services">
                      Товари та послуги
                   </a>
                </li>
    
                <li class="menu-item">
-                  <a href="#">
+                  <a href="#where">
                      Контакти
                   </a>
                </li>
