--- a/optic/index.html
+++ b/optic/index.html
@@ -1135,155 +1135,157 @@
          наші клієнти про нас
       </div>
 
-      <ul class="reviews__list">
-         <li class="reviews__item">
-            <div class="reviews__row">
-               <div class="reviews__column">
-                  <div class="reviews__photo">
-                     <img src="./img/review1.png" alt="people photo">
-                  </div>
-
-                  <div class="reviews__data">
-                     <div class="reviews__name">
-                        Андрій Колос
+      <div class="reviews__slider">
+         <ul class="reviews__list">
+            <li class="reviews__item">
+               <div class="reviews__row">
+                  <div class="reviews__column">
+                     <div class="reviews__photo">
+                        <img src="./img/review1.png" alt="people photo">
                      </div>
-
-                     <div class="reviews__location">
-                        Львів, Україна
-                     </div>
-                  </div>
-               </div>
-
-               <div class="reviews__stars">
-                  4.5
-               </div>
-            </div>
-
-            <div class="reviews__text">
-               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Sed consectetur orci vel fringilla vulputate. 
-               Proin eu turpis eu libero rhoncus semper at quis sem.”.
-            </div>
-         </li>
-
-         <li class="reviews__item">
-            <div class="reviews__row">
-               <div class="reviews__column">
-                  <div class="reviews__photo">
-                     <img src="./img/review2.png" alt="people photo">
-                  </div>
-
-                  <div class="reviews__data">
-                     <div class="reviews__name">
-                        Тетяна Лісна
-                     </div>
-
-                     <div class="reviews__location">
-                        Львів, Україна
+   
+                     <div class="reviews__data">
+                        <div class="reviews__name">
+                           Андрій Колос
+                        </div>
+   
+                        <div class="reviews__location">
+                           Львів, Україна
+                        </div>
                      </div>
                   </div>
-               </div>
-
-               <div class="reviews__stars">
-                  4.5
-               </div>
-            </div>
-
-            <div class="reviews__text">
-               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Sed consectetur orci vel fringilla vulputate. ”.
-            </div>
-         </li>
-
-         <li class="reviews__item">
-            <div class="reviews__row">
-               <div class="reviews__column">
-                  <div class="reviews__photo">
-                     <img src="./img/review3.png" alt="people photo">
-                  </div>
-
-                  <div class="reviews__data">
-                     <div class="reviews__name">
-                        Ольга Ковальчук
-                     </div>
-
-                     <div class="reviews__location">
-                        Львів, Україна
-                     </div>
+   
+                  <div class="reviews__stars">
+                     4.5
                   </div>
                </div>
-
-               <div class="reviews__stars">
-                  4.5
+   
+               <div class="reviews__text">
+                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed consectetur orci vel fringilla vulputate. 
+                  Proin eu turpis eu libero rhoncus semper at quis sem.”.
                </div>
-            </div>
-
-            <div class="reviews__text">
-               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Sed consectetur orci vel fringilla vulputate.”.
-            </div>
-         </li>
-
-         <li class="reviews__item">
-            <div class="reviews__row">
-               <div class="reviews__column">
-                  <div class="reviews__photo">
-                     <img src="./img/review1.png" alt="people photo">
-                  </div>
-
-                  <div class="reviews__data">
-                     <div class="reviews__name">
-                        Роман Кентавр
+            </li>
+   
+            <li class="reviews__item">
+               <div class="reviews__row">
+                  <div class="reviews__column">
+                     <div class="reviews__photo">
+                        <img src="./img/review2.png" alt="people photo">
                      </div>
-
-                     <div class="reviews__location">
-                        Львів, Україна
+   
+                     <div class="reviews__data">
+                        <div class="reviews__name">
+                           Тетяна Лісна
+                        </div>
+   
+                        <div class="reviews__location">
+                           Львів, Україна
+                        </div>
                      </div>
                   </div>
-               </div>
-
-               <div class="reviews__stars">
-                  4.5
-               </div>
-            </div>
-
-            <div class="reviews__text">
-               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Sed consectetur orci vel fringilla vulputate. 
-               Proin eu turpis eu libero rhoncus semper at quis sem.”.
-            </div>
-         </li>
-
-         <li class="reviews__item">
-            <div class="reviews__row">
-               <div class="reviews__column">
-                  <div class="reviews__photo">
-                     <img src="./img/review2.png" alt="people photo">
-                  </div>
-
-                  <div class="reviews__data">
-                     <div class="reviews__name">
-                        Олег Космос
-                     </div>
-
-                     <div class="reviews__location">
-                        Львів, Україна
-                     </div>
+   
+                  <div class="reviews__stars">
+                     4.5
                   </div>
                </div>
-
-               <div class="reviews__stars">
-                  4.5
+   
+               <div class="reviews__text">
+                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed consectetur orci vel fringilla vulputate. ”.
                </div>
-            </div>
-
-            <div class="reviews__text">
-               “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Sed consectetur orci vel fringilla vulputate. 
-               Proin eu turpis eu libero rhoncus semper at quis sem.”.
-            </div>
-         </li>
-      </ul>
+            </li>
+   
+            <li class="reviews__item">
+               <div class="reviews__row">
+                  <div class="reviews__column">
+                     <div class="reviews__photo">
+                        <img src="./img/review3.png" alt="people photo">
+                     </div>
+   
+                     <div class="reviews__data">
+                        <div class="reviews__name">
+                           Ольга Ковальчук
+                        </div>
+   
+                        <div class="reviews__location">
+                           Львів, Україна
+                        </div>
+                     </div>
+                  </div>
+   
+                  <div class="reviews__stars">
+                     4.5
+                  </div>
+               </div>
+   
+               <div class="reviews__text">
+                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed consectetur orci vel fringilla vulputate.”.
+               </div>
+            </li>
+   
+            <li class="reviews__item">
+               <div class="reviews__row">
+                  <div class="reviews__column">
+                     <div class="reviews__photo">
+                        <img src="./img/review1.png" alt="people photo">
+                     </div>
+   
+                     <div class="reviews__data">
+                        <div class="reviews__name">
+                           Роман Кентавр
+                        </div>
+   
+                        <div class="reviews__location">
+                           Львів, Україна
+                        </div>
+                     </div>
+                  </div>
+   
+                  <div class="reviews__stars">
+                     4.5
+                  </div>
+               </div>
+   
+               <div class="reviews__text">
+                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed consectetur orci vel fringilla vulputate. 
+                  Proin eu turpis eu libero rhoncus semper at quis sem.”.
+               </div>
+            </li>
+   
+            <li class="reviews__item">
+               <div class="reviews__row">
+                  <div class="reviews__column">
+                     <div class="reviews__photo">
+                        <img src="./img/review2.png" alt="people photo">
+                     </div>
+   
+                     <div class="reviews__data">
+                        <div class="reviews__name">
+                           Олег Космос
+                        </div>
+   
+                        <div class="reviews__location">
+                           Львів, Україна
+                        </div>
+                     </div>
+                  </div>
+   
+                  <div class="reviews__stars">
+                     4.5
+                  </div>
+               </div>
+   
+               <div class="reviews__text">
+                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed consectetur orci vel fringilla vulputate. 
+                  Proin eu turpis eu libero rhoncus semper at quis sem.”.
+               </div>
+            </li>
+         </ul>
+      </div>
    </div>
 </section>
          <section class="section where" id="where">
